--- a/index.html
+++ b/index.html
@@ -53,6 +53,79 @@
 
   <!--START page template-->
   <div class="-template" role="main">
+    <div class="-template__slider">
+      <div class="camera_wrap" id="slider__index">
+        <!--one slide-->
+        <div data-src="../images/slider/slide-1.png">
+          <!--slide content-->
+          <div class="unit">
+            <h1 class="unit__title">Cпециализированый интернет-магазин по продаже окон</h1>
+            <div class="unit__content">
+              <p>Фабрика вікон «Екіпаж» проводить соціальну акцію. Всі зібрані речі будуть відправлені в дитячі будинки та будинки пристарілих.</p>
+            </div>
+            <a href="#" class="unit__button">Подробнее</a>
+            <div class="-countdown__wrapper">
+                <!--countdown-->
+                <div class="-countdown">
+                  <h4 class="title">До конца акции осталось:</h4>
+                  <div class="content">
+                    <figure class="item">
+                      <span class="item__content">7</span>
+                      <figcaption class="item__title">Дней</figcaption>
+                    </figure>
+                    <div>
+                      <figure class="item">
+                        <span class="item__content">20</span>
+                        <figcaption class="item__title">Часов</figcaption>
+                      </figure>
+                      <figure class="item">
+                        <span class="item__content">59</span>
+                        <figcaption class="item__title">Минут</figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                  <a href="#" class="button">Все акции</a>
+                </div>
+              </div>
+          </div><!--end slide content-->
+        </div><!--end slide-->
+        <!--one slide-->
+        <div data-src="../images/slider/slide-1.png">
+          <!--slide content-->
+          <div class="unit">
+            <h1 class="unit__title">Специальная программа для жителей сёл</h1>
+            <div class="unit__content">
+              <p>Фабрика вікон «Екіпаж» проводить соціальну акцію. Всі зібрані речі будуть відправлені в дитячі будинки та будинки пристарілих.</p>
+              <p>Зробіть чиюсь зиму трохи тепліше!</p>
+            </div>
+            <a href="#" class="unit__button">Подробнее</a>
+            <div class="-countdown__wrapper">
+              <!--countdown-->
+              <div class="-countdown">
+                <h4 class="title">До конца акции осталось:</h4>
+                <div class="content">
+                  <figure class="item">
+                    <span class="item__content">7</span>
+                    <figcaption class="item__title">Дней</figcaption>
+                  </figure>
+                  <div>
+                    <figure class="item">
+                      <span class="item__content">20</span>
+                      <figcaption class="item__title">Часов</figcaption>
+                    </figure>
+                    <figure class="item">
+                      <span class="item__content">59</span>
+                      <figcaption class="item__title">Минут</figcaption>
+                    </figure>
+                  </div>
+                </div>
+                <a href="#" class="button">Все акции</a>
+              </div>
+            </div>
+          </div><!--end slide content-->
+        </div><!--end slide-->
+      </div><!--end camera slider plugin-->
+      <!--bottom slider block-->
       <div class="-template__slider__bottom">
         <div class="-button__main__wrapper">
           <!--button 1-->
@@ -107,6 +180,9 @@
           </a>
         </div>
       </div>
+    </div><!--end template__slider-->
+
+
 
     <!--main column with content-->
     <div class="-template__textContent">
@@ -222,6 +298,11 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/plugins/placeholder-min.js"></script>
+<!--slider-->
+<script src="js/plugins/slider/jquery.easing.1.3.js"></script>
+<script src="js/plugins/slider/jquery.mobile.customized.min.js"></script>
+<script src="js/plugins/slider/camera.min.js"></script>
+<!--slider-->
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
