--- a/index.html
+++ b/index.html
@@ -298,13 +298,14 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/plugins/placeholder-min.js"></script>
+<!--jqueryTools-->
+<script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
 <!--slider-->
 <script src="js/plugins/slider/jquery.easing.1.3.js"></script>
 <script src="js/plugins/slider/jquery.mobile.customized.min.js"></script>
 <script src="js/plugins/slider/camera.min.js"></script>
-<!--slider-->
-<script src="js/main.js"></script>
 
+<script src="js/main.js"></script>
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
 mathiasbynens.be/notes/async-analytics-snippet -->
 <script>
