--- a/template.html
+++ b/template.html
@@ -53,6 +53,46 @@
 
   <!--START page template-->
   <div class="-template" role="main">
+    <!--expanded list ("All production")-->
+    <div class="-template__expanded" id="-template__expanded">
+      <a href="#" class="trigger">Вся продукция</a>
+      <div class="content">
+        <a href="#" class="close"></a>
+        <div class="content__container">
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-4.png" alt="">
+            <span class="unit__content">Подоконники</span>
+          </a>
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-1.png" alt="">
+            <span class="unit__content">Жалюзи</span>
+          </a>
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-5.png" alt="">
+            <span class="unit__content">Защитные ролеты</span>
+          </a>
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-2.png" alt="">
+            <span class="unit__content">Ролеты</span>
+          </a>
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-3.png" alt="">
+            <span class="unit__content">Москитные сетки</span>
+          </a>
+          <!--unit-->
+          <a href="#" class="unit">
+            <img class="unit__image" src="images/product_categories/unit-6.png" alt="">
+            <span class="unit__content">Алюминиевые системы</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
     <!--****-->
     <h1 class="-templage__h1"></h1>
     <!--main column with content-->
