--- a/about.html
+++ b/about.html
@@ -233,11 +233,16 @@
 <script src="js/plugins/placeholder-min.js"></script>
 <!--jqueryTools-->
 <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
+<!--carousel-->
+<script src="js/plugins/jquery.jcarousel.min.js"></script>
+<!--custom selectbox-->
+<script src="js/plugins/selectbox/cusel.js"></script>
+<script src="js/plugins/selectbox/jScrollPane.js"></script>
+<script src="js/plugins/selectbox/jquery.mousewheel.js"></script>
 <!--slider-->
 <script src="js/plugins/slider/jquery.easing.1.3.js"></script>
 <script src="js/plugins/slider/jquery.mobile.customized.min.js"></script>
 <script src="js/plugins/slider/camera.min.js"></script>
-
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
