--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <!--slide content-->
           <div class="unit">
             <h1 class="unit__title">Cпециализированый интернет-магазин по продаже окон</h1>
+            <img class="unit__image" src="images/slider/consultant.png">
             <div class="unit__content">
               <p>Фабрика вікон «Екіпаж» проводить соціальну акцію. Всі зібрані речі будуть відправлені в дитячі будинки та будинки пристарілих.</p>
             </div>
@@ -94,6 +95,7 @@
           <!--slide content-->
           <div class="unit">
             <h1 class="unit__title">Специальная программа для жителей сёл</h1>
+            <img class="unit__image" src="images/slider/consultant.png">
             <div class="unit__content">
               <p>Фабрика вікон «Екіпаж» проводить соціальну акцію. Всі зібрані речі будуть відправлені в дитячі будинки та будинки пристарілих.</p>
               <p>Зробіть чиюсь зиму трохи тепліше!</p>
@@ -300,11 +302,16 @@
 <script src="js/plugins/placeholder-min.js"></script>
 <!--jqueryTools-->
 <script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
+<!--carousel-->
+<script src="js/plugins/jquery.jcarousel.min.js"></script>
+<!--custom selectbox-->
+<script src="js/plugins/selectbox/cusel.js"></script>
+<script src="js/plugins/selectbox/jScrollPane.js"></script>
+<script src="js/plugins/selectbox/jquery.mousewheel.js"></script>
 <!--slider-->
 <script src="js/plugins/slider/jquery.easing.1.3.js"></script>
 <script src="js/plugins/slider/jquery.mobile.customized.min.js"></script>
 <script src="js/plugins/slider/camera.min.js"></script>
-
 <script src="js/main.js"></script>
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
 mathiasbynens.be/notes/async-analytics-snippet -->
