--- a/product.html
+++ b/product.html
@@ -157,9 +157,10 @@
         <!--tab 1-->
         <form class="-calculator_aside__tab_unit">
           <div class="unit">
-            <select>
-              <option>Something</option>
-              <option>Something very very difficult</option>
+            <!--id are required for the emulator works. NO ideas how it works-->
+            <select id="select-1">
+              <option value="1">Something</option>
+              <option value="2">Something very very difficult</option>
             </select>
             <img src="images/tooltip.png" title="This is a tooltip helper. I need to style it.">
           </div>
@@ -170,7 +171,7 @@
             </span>
           </div>
           <div class="unit">
-            <select>
+            <select id="select-2">
               <option>Something</option>
               <option>Something very very difficult</option>
             </select>
@@ -198,7 +199,7 @@
           <div class="unit unit__align_btm">
             <div class="select_small">
               <h4 class="label">Количество изделий</h4>
-              <select>
+              <select id="select-3">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
