--- a/serv_nav.html
+++ b/serv_nav.html
@@ -11,6 +11,9 @@
     <li><a href="index.html">Index</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="product.html">Product</a></li>
+    <li><a href="calculator.html">calc</a></li>
+    <li><a href="calculator_start.html">calc start</a></li>
+    <li><a href="popup.html">Всплывающие окна</a></li>
   </ul>
 </nav>
 </body>
